2010-07-16  Hans Wennborg  <hans@chromium.org>

Reviewed by Steve Block.

        DeviceOrientationEvent.h should not forward-declare DeviceOrientation
        https://bugs.webkit.org/show_bug.cgi?id=42447

        When destructing m_orientation, DeviceOrientation cannot be an incomplete type.

        * dom/DeviceOrientationEvent.h:

Canonical link: https://commits.webkit.org/54384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63544 268f45cc-cd09-0410-ab3c-d52691b4dbfc