WebCore/dom/DeviceOrientationEvent.h
@@ -26,11 +26,10 @@
 #ifndef DeviceOrientationEvent_h
 #define DeviceOrientationEvent_h
 
+#include "DeviceOrientation.h"
 #include "Event.h"
 
 namespace WebCore {
-
-class DeviceOrientation;
 
 class DeviceOrientationEvent : public Event {
 public:
